--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-tailwindcss": "^3.14.1",
     "gzip-size": "^7.0.0",
     "postcss": "^8",
+    "standard-version": "^9.5.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
