--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "autoprefixer": "^10.0.1",
+    "cssnano": "^6.0.3",
     "daisyui": "^4.6.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
