--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "version": "standard-version"
   },
@@ -43,11 +44,10 @@
     "autoprefixer": "^10.0.1",
     "cssnano": "^6.0.3",
     "daisyui": "^4.6.1",
-    "eslint": "^8",
+    "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-tailwindcss": "^3.14.1",
     "gzip-size": "^7.0.0",
@@ -55,6 +55,6 @@
     "schema-dts": "^1.1.2",
     "standard-version": "^9.5.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5.3.3"
   }
 }
