--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "lucide-react": "^0.320.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
