feat: init work history section design and content

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,8 +14,10 @@
     "daisyui",
     "dunksoft",
     "gtag",
+    "Kinect",
     "lucide",
     "nextjs",
+    "obase",
     "robotstxt",
     "umutto",
     "unoptimized",
