--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
     "daisyui",
     "dunksoft",
     "gtag",
+    "INIAD",
     "Kinect",
     "lucide",
     "nextjs",
@@ -22,7 +23,8 @@
     "umutto",
     "unoptimized",
     "wearee",
-    "webp"
+    "webp",
+    "Yeditepe"
   ],
   "cSpell.ignorePaths": [
     "package-lock.json",
