style: change project cards to square

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,11 +15,13 @@
     "dunksoft",
     "gtag",
     "INIAD",
-    "Kinect",
     "Keras",
+    "Kinect",
+    "lockdown",
     "lucide",
     "nextjs",
     "obase",
+    "ODPT",
     "robotstxt",
     "umutto",
     "unoptimized",
