feat: add google analytics via third-parties

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,7 +28,8 @@
     "unoptimized",
     "wearee",
     "webp",
-    "Yeditepe"
+    "Yeditepe",
+    "G-04PH07ZCQE"
   ],
   "cSpell.ignorePaths": [
     "package-lock.json",
