--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.1.0",
+    "@next/third-parties": "^14.1.0",
     "@types/mdx": "^2.0.11",
     "lucide-react": "^0.320.0",
     "next": "14.1.0",
