--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-tailwindcss": "^3.14.1",
     "gzip-size": "^7.0.0",
     "postcss": "^8",
+    "postcss-import": "^16.0.0",
     "schema-dts": "^1.1.2",
     "standard-version": "^9.5.0",
     "tailwindcss": "^3.3.0",
