feat: add wevnal to work history

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
   "cSpell.enabled": true,
   "cSpell.words": [
     "artboard",
+    "BOTCHAN",
     "classname",
     "cogostuff",
     "cssnano",
@@ -30,6 +31,7 @@
     "unoptimized",
     "wearee",
     "webp",
+    "wevnal",
     "Yeditepe"
   ],
   "cSpell.ignorePaths": [
